# ImPipe

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  package-lock.json
docs/: README.md
interface/: .editorconfig  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
interface/public/: site.webmanifest
interface/src/: App.vue  main.ts
interface/src-tauri/: Cargo.toml  tauri.conf.json
interface/src/assets/: main.css
interface/src/components/: AddressInput.vue  AuthButton.vue  ServerStatus.vue  SideRail.vue  ToastContainer.vue  addressInput.vue  apiInput.vue  loginButton.vue  navbar.vue
interface/src/composables/: useToast.ts
interface/src/router/: index.ts
interface/src/stores/: auth.ts  connectionStore.ts  toastStore.ts
interface/src/views/: 404View.vue  LoginView.vue  NotFoundView.vue  OfflineView.vue  firstView.vue
src/: lib.rs  main.rs
web/: package-lock.json
